--- a/index.html
+++ b/index.html
@@ -8,5 +8,72 @@
 
     <title>Project2</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <figure class="logo">
+        <img src="./img/Logo.png" alt="Besnik Logo" />
+      </figure>
+      <nav class="nav">
+        <a href="#" class="nav-item">Home</a>
+        <a href="#" class="nav-item">Features</a>
+        <a href="#" class="nav-item">Pricing</a>
+        <a href="#" class="nav-item">About</a>
+        <a href="#" class="nav-item">Contact</a>
+      </nav>
+      <section class="user">
+        <a class="user__button--sign-in">Sign in</a>
+        <button class="user__button--sign-up">Sign up</button>
+      </section>
+    </header>
+
+    <main>
+      <section class="hero">
+        <article class="main-content">
+          <div class="hero__content">
+            <aside>😎 EASY LEAENING PLATFORM</aside>
+            <h2 class="hero-content__title">Words learner come here.</h2>
+            <p class="hero-content__description">
+              Build skills with courses, certificates, and get online knowledge
+              from our world-class platform.
+            </p>
+            <div class="hero-content__utilities">
+              <button href="#" class="utilities__button--get-started">
+                Get Started
+              </button>
+              <a href="#" class="utilities__button--play"
+                ><img src="./img/play.svg" alt="Play button"
+              /></a>
+            </div>
+          </div>
+          <div class="hero__media">
+            <img
+              class="hero-media__img"
+              src="./img/hero_img.png"
+              alt="A happy studying women"
+            />
+            <figure class="hero-media__caption--course">
+              <img src="./img/Book.svg" alt="Book" />
+              <img src="./img/Book_line.png" alt="Book line" />
+              <figcaption>Courses 1000+</figcaption>
+            </figure>
+            <figure class="hero-media__caption--schedule">
+              <img src="./img/schedule1.jpg" alt="schedule" />
+              <img src="./img/schedule2.jpg" alt="schedule" />
+              <img src="./img/schedule3.jpg" alt="schedule" />
+              <img src="./img/schedule4.jpg" alt="schedule" />
+              <figcaption>Schedules</figcaption>
+            </figure>
+            <figure class="hero-media__caption--member">
+              <img src="./img/mem1.png" alt="Member" />
+              <img src="./img/mem2.png" alt="Member" />
+              <img src="./img/mem3.png" alt="Member" />
+              <img src="./img/mem4.png" alt="Member" />
+              <img src="./img/mem5.png" alt="Member" />
+              <figcaption>Our Active Students</figcaption>
+            </figure>
+          </div>
+        </article>
+      </section>
+    </main>
+  </body>
 </html>
